# obsidian-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  compose.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  REPOSITORY_METADATA.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/openclaw/: openclaw.env.example  openclaw.example.json5  worker.env.example
docs/: architecture.md  capture-queue.md  deployment-macos.md  development.md  openclaw-telegram.md  operations.md  product.md  project-context.md  publishing-checklist.md  roadmap.md  threat-model.md
docs/decisions/: 0001-use-architecture-decision-records.md  0002-separate-agent-from-vault-writer.md  0003-safe-write-policy.md  0004-portable-mac-mini-deployment.md  0005-use-mit-license.md  0006-use-local-durable-capture-queue.md  0007-use-openclaw-native-telegram-and-typed-capture-command.md  README.md
docs/handoffs/: 2026-07-16-mac-mini-deployment.md
docs/runbooks/: backup-and-restore.md  incident-response.md
integrations/openclaw-capture/: LICENSE  README.md  bridge-process.ts  index.ts  openclaw.plugin.json  package-lock.json  package.json  plugin.ts  tsconfig.json  types.ts
src/obsidian_assistant/: __init__.py  __main__.py  cli.py  config.py  diagnostics.py
tests/: test_bridge.py  test_capture.py  test_cli.py  test_config.py  test_events.py  test_processor.py  test_queue.py  test_vault_policy.py
(+10 files in other folders)
